--- a/.env
+++ b/.env
@@ -18,3 +18,14 @@
 APP_ENV=dev
 APP_SECRET=1bc18d2dec559dc37eb8edbfde3e4802
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DB_HOST="database"
+DB_PORT="3306"
+DB_DATABASE="logs"
+DB_USER="admin"
+DB_PASSWORD="admin"
+DB_DATABASE_SERVER_VERSION="8.4.0"
+###< doctrine/doctrine-bundle ###
