--- a/.env
+++ b/.env
@@ -29,3 +29,10 @@ DB_USER="admin"
 DB_PASSWORD="admin"
 DB_DATABASE_SERVER_VERSION="8.4.0"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
