Parse log from file

--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,13 @@
         "php": ">=8.3.8",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "aws/aws-sdk-php-symfony": "^2.7",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "league/flysystem-aws-s3-v3": "*",
+        "league/flysystem-bundle": "^3.3",
         "nesbot/carbon": "^3.6",
         "ramsey/uuid": "^3.9",
         "runtime/frankenphp-symfony": "^0.2.0",
