--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ DB_DATABASE_SERVER_VERSION="8.4.0"
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+
+###> aws/aws-sdk-php-symfony ###
+AWS_KEY=not-a-real-key
+AWS_SECRET=@@not-a-real-secret
+###< aws/aws-sdk-php-symfony ###
