--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    _instanceof:
+        App\Service\FileReader\Interface\StorageDriverInterface:
+            tags: [ 'app.file_reader.drivers' ]
+            
+    App\Service\FileReader\FileReader:
+        arguments:
+            - !tagged_iterator { tag: app.file_reader.drivers }
