--- a/compose.yaml
+++ b/compose.yaml
@@ -46,6 +46,8 @@ services:
       MYSQL_DATABASE: ${DB_NAME:-logs}
       MYSQL_USER: ${DB_USER:-admin}
       MYSQL_PASSWORD: ${DB_PASSWORD:-admin}
+    ports:
+      - "3306:3306"
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 5s
