--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "dragonmantank/cron-expression": "^3.3",
         "league/flysystem-aws-s3-v3": "*",
         "league/flysystem-bundle": "^3.3",
         "nesbot/carbon": "^3.6",
