--- a/.env
+++ b/.env
@@ -34,10 +34,10 @@ DB_DATABASE_SERVER_VERSION="8.4.0"
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN="doctrine://default"
 ###< symfony/messenger ###
 
 ###> aws/aws-sdk-php-symfony ###
-AWS_KEY=not-a-real-key
-AWS_SECRET=@@not-a-real-secret
+AWS_KEY="not-a-real-key"
+AWS_SECRET="@@not-a-real-secret"
 ###< aws/aws-sdk-php-symfony ###
