--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "ramsey/uuid": "^3.9",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.1.*",
+        "symfony/doctrine-messenger": "7.1.*",
         "symfony/dotenv": "7.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
