--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -4,6 +4,7 @@ framework:
         # failure_transport: failed
 
         transports:
+            async: "%env(MESSENGER_TRANSPORT_DSN)%"
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             # async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
@@ -11,7 +12,7 @@ framework:
 
         routing:
             # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            'App\Messenger\Message\CreateLogFromFileMessage': async
 
 # when@test:
 #    framework:
