--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=1bc18d2dec559dc37eb8edbfde3e4802
 DB_HOST="database"
 DB_PORT="3306"
 DB_DATABASE="logs"
-DB_USER="admin"
+DB_USER="root"
 DB_PASSWORD="admin"
 DB_DATABASE_SERVER_VERSION="8.4.0"
 ###< doctrine/doctrine-bundle ###
