--- a/composer.json
+++ b/composer.json
@@ -82,9 +82,12 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
+        "symfony/maker-bundle": "^1.60",
         "symfony/phpunit-bridge": "^7.1"
     }
 }
